--- a/styles/index.css
+++ b/styles/index.css
@@ -25,8 +25,8 @@ main {
 
 .list-group-item>img {
   background: silver;
-  width: 64px;
-  height: 64px;
+  min-width: 64px;
+  min-height: 64px;
   border-radius: 50%;
   border: none;
   margin: 0;
