--- a/styles/index.css
+++ b/styles/index.css
@@ -51,6 +51,14 @@ main {
   font-weight: bold;
 }
 
+.alert-success {
+  margin-top: 16px;
+}
+
+.btn-add-contact {
+  margin-top: 24px;
+}
+
 /* .btn-row {
   display: flex;
   justify-content: flex-end;
