Implement search contact

--- a/styles/index.css
+++ b/styles/index.css
@@ -61,6 +61,10 @@ main {
 
 .search-field {
   display: flex;
+}
+
+#search-form {
+  display: flex;
   justify-content: flex-end;
   margin-bottom: 8px;
 }
